# rust-postgres-bindgen

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  stage1.rs  stage2.rs  types.rs
src/resources/: catalog.sql  functions.sql  mapping.ron  types.sql  unsupported
