[package]
name = "postgres-bindgen"
version = "0.1.0"
authors = ["José Franco Campos <josefrancocampos@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
codegen = { git = "https://github.com/josefrcm/codegen" }
derive_deref = "1.1"
heck = "0.3"
itertools = "0.10"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
postgres-protocol = "0.6"
quick-error = "2.0"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
